--- a/NEWS
+++ b/NEWS
@@ -1631,3 +1631,6 @@ version 2.9.6 (2022-09-05)
 - Add TransLogit parameter to BASiCS_PlotDE to have volcano plots on a logit scale.
   As the posterior probabilities are in the interval [0, 1] this may make it
   easier to visualise difference in "interesting" regions (e.g., 0.6-1)
+
+version 2.9.7 (2022-09-06)
+- Bugfix in BASiCS_DetectHVG/BASiCS_DetectLVG.
