--- a/NEWS
+++ b/NEWS
@@ -1635,7 +1635,6 @@ version 2.9.6 (2022-09-05)
 version 2.9.7 (2022-09-06)
 - Bugfix in BASiCS_DetectHVG/BASiCS_DetectLVG.
   
-
 version 2.11.2 (2022-11-23)
 - Bugfix in DetectLVG/HVG, see Issue #265; delta column in results was actually
   duplicated mu column.
@@ -1648,3 +1647,6 @@ version 2.11.3 (2022-12-15)
 (depends on the `scRNAseq` package).
 - Adds extra option to plotting functions for MCMC diagnostics (e.g. 
 `BASiCS_DiagPlot()`)
+
+version 2.11.4 (2022-12-15) 
+- Solves bug in `BASiCS_DiagPlot()`
