--- a/NEWS
+++ b/NEWS
@@ -1676,3 +1676,6 @@ version 2.13.1 (2023-06-16)
 
 version 2.13.2 (2023-06-16)
 - Changes `LazyData` to `true` to avoid errors 
+
+version 2.13.3 (2023-06-16)
+- Reverts `LazyData` to `false` based on BiocCheck feedback
